Email de titulos y eliminacion de flechas y scrool autoamtico en inicio

--- a/css/style.css
+++ b/css/style.css
@@ -568,6 +568,10 @@
         padding: 0;
     }
     
+    .scroll-arrow {
+        display: none;
+    }
+    
     .parallax-section {
         flex-direction: column;
         height: 100vh;
