--- a/css/inscripciones.css
+++ b/css/inscripciones.css
@@ -27,7 +27,7 @@ body {
     position: relative;
     z-index: 1;
     padding: 30px 0;
-    margin-top: 45px;
+    margin-top: 0;
 }
 .titulos {
     text-align: center;
@@ -595,4 +595,9 @@ body {
     100% {
         transform: translateX(25%);
     }
+}
+
+/* Override para navbar en página de inscripciones */
+.navbar {
+    position: static !important;
 }
