arreglo de autoridades y navbar

--- a/css/autoridades.css
+++ b/css/autoridades.css
@@ -1200,3 +1200,8 @@ main {
         transform: none;
     }
 }
+
+/* Ocultar navbar cuando el modal está abierto */
+body.modal-open .navbar {
+    display: none;
+}
