--- a/css/inscripciones.css
+++ b/css/inscripciones.css
@@ -305,7 +305,7 @@ body {
 .slide-section .subjects-list li { background: none; color: rgb(73, 84, 106); }
 .slide-section .subjects-list li:hover { background: none; }
 .slide-section .requirements-list li { background: none; color: rgb(73, 84, 106); border-left: none; }
-.slide-section .requirements-list li:hover { background: rgba(48, 62, 80, 0.1); }
+
 .slide-section .video-container { 
     margin-top: 1rem; 
     border-radius: 12px; 
@@ -316,8 +316,14 @@ body {
 .slide-section .responsive-video { 
     width: 100%; 
     max-width: 100%;
+    height: 20rem;
     aspect-ratio: 16/9; 
-    border: none; 
+    border: none;
+    margin-top: 1rem; 
+    border-radius: 12px; 
+    overflow: hidden; 
+    box-shadow: 0 4px 15px rgba(48, 62, 80, 0.3);
+    max-width: 100%; 
 }
 #school-email {
     margin-top: 2rem;
